monero_libwallet2_api_c/src/main/cpp/wallet2_api_c.h

//     };
//     virtual ~PendingTransaction() = 0;
//     virtual int status() const = 0;
extern ADDAPI int MONERO_PendingTransaction_status(void* pendingTx_ptr);
//     virtual std::string errorString() const = 0;
extern ADDAPI const char* MONERO_PendingTransaction_errorString(void* pendingTx_ptr);
//     virtual bool commit(const std::string &filename = "", bool overwrite = false) = 0;
extern ADDAPI bool MONERO_PendingTransaction_commit(void* pendingTx_ptr, const char* filename, bool overwrite);
extern ADDAPI const char* MONERO_PendingTransaction_commitUR(void* pendingTx_ptr, int max_fragment_length);
//     virtual uint64_t amount() const = 0;
extern ADDAPI uint64_t MONERO_PendingTransaction_amount(void* pendingTx_ptr);
//     virtual uint64_t dust() const = 0;
extern ADDAPI uint64_t MONERO_PendingTransaction_dust(void* pendingTx_ptr);
//     virtual uint64_t fee() const = 0;
extern ADDAPI uint64_t MONERO_PendingTransaction_fee(void* pendingTx_ptr);
//     virtual std::vector<std::string> txid() const = 0;
extern ADDAPI const char* MONERO_PendingTransaction_txid(void* pendingTx_ptr, const char* separator);
//     virtual uint64_t txCount() const = 0;
extern ADDAPI uint64_t MONERO_PendingTransaction_txCount(void* pendingTx_ptr);
//     virtual std::vector<uint32_t> subaddrAccount() const = 0;
extern ADDAPI const char* MONERO_PendingTransaction_subaddrAccount(void* pendingTx_ptr, const char* separator);
//     virtual std::vector<std::set<uint32_t>> subaddrIndices() const = 0;
extern ADDAPI const char* MONERO_PendingTransaction_subaddrIndices(void* pendingTx_ptr, const char* separator);
//     virtual std::string multisigSignData() = 0;
extern ADDAPI const char* MONERO_PendingTransaction_multisigSignData(void* pendingTx_ptr);
//     virtual void signMultisigTx() = 0;
extern ADDAPI void MONERO_PendingTransaction_signMultisigTx(void* pendingTx_ptr);
//     virtual std::vector<std::string> signersKeys() const = 0;
extern ADDAPI const char* MONERO_PendingTransaction_signersKeys(void* pendingTx_ptr, const char* separator);
//     virtual std::vector<std::string> hex() const = 0;
extern ADDAPI const char* MONERO_PendingTransaction_hex(void* pendingTx_ptr, const char* separator);
//     };
//     virtual ~UnsignedTransaction() = 0;
//     virtual int status() const = 0;
extern ADDAPI int MONERO_UnsignedTransaction_status(void* unsignedTx_ptr);
//     virtual std::string errorString() const = 0;
extern ADDAPI const char* MONERO_UnsignedTransaction_errorString(void* unsignedTx_ptr);
//     virtual std::vector<uint64_t> amount() const = 0;
extern ADDAPI const char* MONERO_UnsignedTransaction_amount(void* unsignedTx_ptr, const char* separator);
//     virtual std::vector<uint64_t>  fee() const = 0;
extern ADDAPI const char* MONERO_UnsignedTransaction_fee(void* unsignedTx_ptr, const char* separator);
//     virtual std::vector<uint64_t> mixin() const = 0;
extern ADDAPI const char* MONERO_UnsignedTransaction_mixin(void* unsignedTx_ptr, const char* separator);
//     virtual std::string confirmationMessage() const = 0;
extern ADDAPI const char* MONERO_UnsignedTransaction_confirmationMessage(void* unsignedTx_ptr);
//     virtual std::vector<std::string> paymentId() const = 0;
extern ADDAPI const char* MONERO_UnsignedTransaction_paymentId(void* unsignedTx_ptr, const char* separator);
//     virtual std::vector<std::string> recipientAddress() const = 0;
extern ADDAPI const char* MONERO_UnsignedTransaction_recipientAddress(void* unsignedTx_ptr, const char* separator);
//     virtual uint64_t minMixinCount() const = 0;
extern ADDAPI uint64_t MONERO_UnsignedTransaction_minMixinCount(void* unsignedTx_ptr);
//     virtual uint64_t txCount() const = 0;
extern ADDAPI uint64_t MONERO_UnsignedTransaction_txCount(void* unsignedTx_ptr);
//     virtual bool sign(const std::string &signedFileName) = 0;
extern ADDAPI bool MONERO_UnsignedTransaction_sign(void* unsignedTx_ptr, const char* signedFileName);
extern ADDAPI const char* MONERO_UnsignedTransaction_signUR(void* unsignedTx_ptr, int max_fragment_length);
//     };
//     struct Transfer {
//         Transfer(uint64_t _amount, const std::string &address);
//         const uint64_t amount;
//         const std::string address;
//     };
//     virtual ~TransactionInfo() = 0;
//     virtual int  direction() const = 0;
extern ADDAPI int MONERO_TransactionInfo_direction(void* txInfo_ptr);
//     virtual bool isPending() const = 0;
extern ADDAPI bool MONERO_TransactionInfo_isPending(void* txInfo_ptr);
//     virtual bool isFailed() const = 0;
extern ADDAPI bool MONERO_TransactionInfo_isFailed(void* txInfo_ptr);
//     virtual bool isCoinbase() const = 0;
extern ADDAPI bool MONERO_TransactionInfo_isCoinbase(void* txInfo_ptr);
//     virtual uint64_t amount() const = 0;
extern ADDAPI uint64_t MONERO_TransactionInfo_amount(void* txInfo_ptr);
//     virtual uint64_t fee() const = 0;
extern ADDAPI uint64_t MONERO_TransactionInfo_fee(void* txInfo_ptr);
//     virtual uint64_t blockHeight() const = 0;
extern ADDAPI uint64_t MONERO_TransactionInfo_blockHeight(void* txInfo_ptr);
//     virtual std::string description() const = 0;
extern ADDAPI const char* MONERO_TransactionInfo_description(void* txInfo_ptr);
//     virtual std::set<uint32_t> subaddrIndex() const = 0;
extern ADDAPI const char* MONERO_TransactionInfo_subaddrIndex(void* txInfo_ptr, const char* separator);
//     virtual uint32_t subaddrAccount() const = 0;
extern ADDAPI uint32_t MONERO_TransactionInfo_subaddrAccount(void* txInfo_ptr);
//     virtual std::string label() const = 0;
extern ADDAPI const char* MONERO_TransactionInfo_label(void* txInfo_ptr);
//     virtual uint64_t confirmations() const = 0;
extern ADDAPI uint64_t MONERO_TransactionInfo_confirmations(void* txInfo_ptr);
//     virtual uint64_t unlockTime() const = 0;
extern ADDAPI uint64_t MONERO_TransactionInfo_unlockTime(void* txInfo_ptr);
//     virtual std::string hash() const = 0;
extern ADDAPI const char* MONERO_TransactionInfo_hash(void* txInfo_ptr);
//     virtual std::time_t timestamp() const = 0;
extern ADDAPI uint64_t MONERO_TransactionInfo_timestamp(void* txInfo_ptr);
//     virtual std::string paymentId() const = 0;
extern ADDAPI const char* MONERO_TransactionInfo_paymentId(void* txInfo_ptr);
//     virtual const std::vector<Transfer> & transfers() const = 0;
extern ADDAPI int MONERO_TransactionInfo_transfers_count(void* txInfo_ptr);
extern ADDAPI uint64_t MONERO_TransactionInfo_transfers_amount(void* txInfo_ptr, int index);
extern ADDAPI const char* MONERO_TransactionInfo_transfers_address(void* txInfo_ptr, int address);
// };
// struct TransactionHistory
// {
//     virtual ~TransactionHistory() = 0;
//     virtual int count() const = 0;
extern ADDAPI int MONERO_TransactionHistory_count(void* txHistory_ptr);
//     virtual TransactionInfo * transaction(int index)  const = 0;
extern ADDAPI void* MONERO_TransactionHistory_transaction(void* txHistory_ptr, int index);
//     virtual TransactionInfo * transaction(const std::string &id) const = 0;
extern ADDAPI void* MONERO_TransactionHistory_transactionById(void* txHistory_ptr, const char* id);
//     virtual std::vector<TransactionInfo*> getAll() const = 0;
//     virtual void refresh() = 0;
extern ADDAPI void MONERO_TransactionHistory_refresh(void* txHistory_ptr);
//     virtual void setTxNote(const std::string &txid, const std::string &note) = 0;
extern ADDAPI void MONERO_TransactionHistory_setTxNote(void* txHistory_ptr, const char* txid, const char* note);
// };
// struct AddressBookRow {
// public:
//     AddressBookRow(std::size_t _rowId, const std::string &_address, const std::string &_paymentId, const std::string &_description):
//         m_rowId(_rowId),
//         m_address(_address),
//         m_paymentId(_paymentId), 
//         m_description(_description) {}
 
// private:
//     std::size_t m_rowId;
//     std::string m_address;
//     std::string m_paymentId;
//     std::string m_description;
// public:
//     std::string extra;
extern ADDAPI const char* MONERO_AddressBookRow_extra(void* addressBookRow_ptr);
//     std::string getAddress() const {return m_address;} 
extern ADDAPI const char* MONERO_AddressBookRow_getAddress(void* addressBookRow_ptr);
//     std::string getDescription() const {return m_description;} 
extern ADDAPI const char* MONERO_AddressBookRow_getDescription(void* addressBookRow_ptr);
//     std::string getPaymentId() const {return m_paymentId;} 
extern ADDAPI const char* MONERO_AddressBookRow_getPaymentId(void* addressBookRow_ptr);
//     std::size_t getRowId() const {return m_rowId;}
extern ADDAPI size_t MONERO_AddressBookRow_getRowId(void* addressBookRow_ptr);
//     };
//     virtual ~AddressBook() = 0;
//     virtual std::vector<AddressBookRow*> getAll() const = 0;
extern ADDAPI int MONERO_AddressBook_getAll_size(void* addressBook_ptr);
extern ADDAPI void* MONERO_AddressBook_getAll_byIndex(void* addressBook_ptr, int index);
//     virtual bool addRow(const std::string &dst_addr , const std::string &payment_id, const std::string &description) = 0;  
extern ADDAPI bool MONERO_AddressBook_addRow(void* addressBook_ptr, const char* dst_addr , const char* payment_id, const char* description);
//     virtual bool deleteRow(std::size_t rowId) = 0;
extern ADDAPI bool MONERO_AddressBook_deleteRow(void* addressBook_ptr, size_t rowId);
//     virtual bool setDescription(std::size_t index, const std::string &description) = 0;
extern ADDAPI bool MONERO_AddressBook_setDescription(void* addressBook_ptr, size_t rowId, const char* description);
//     virtual void refresh() = 0;  
extern ADDAPI void MONERO_AddressBook_refresh(void* addressBook_ptr);
//     virtual std::string errorString() const = 0;
extern ADDAPI const char* MONERO_AddressBook_errorString(void* addressBook_ptr);
//     virtual int errorCode() const = 0;
extern ADDAPI int MONERO_AddressBook_errorCode(void* addressBook_ptr);
//     virtual int lookupPaymentID(const std::string &payment_id) const = 0;
extern ADDAPI int MONERO_AddressBook_lookupPaymentID(void* addressBook_ptr, const char* payment_id);